RigthCodeGIT/Resultados/ArquivoResultado.txt

===============================================================
Autor: @author Jackson Daniel Almeida do Nascimento@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\Projeto_Teste_Singleton_1\src\br\edu\fafica\alunoum/Launch.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Carlos Eduardo Andrade Lima@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\Projeto_Teste_Singleton_2\src\br\edu\fafica\alunodois/App.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\Projeto_Teste_Singleton_3\src\br\edu\fafica\alunotres/Main.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\Projeto_Teste_Singleton_4\src\br\edu\fafica\alunoquatro/Launch.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\Projeto_Teste_Singleton_5\src\br\edu\fafica\alunocinco/Launch.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/teste.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/teste10.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:23 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/teste2.java
Compilação: Arquivo Não compilado

C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste\teste2.java:5: error: ';' expected
		System.out.println("")
		                      ^
1 error

===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:24 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/teste3.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:24 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/TesteArquivo01.java
Compilação: Arquivo Não compilado

C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste\TesteArquivo01.java:15: error: class teta is public, should be declared in a file named teta.java
public class teta {
       ^
1 error

===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:24 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/TesteArquivo02.java
Compilação: Arquivo Compilador com Sucesso


===============================================================
Autor: @author Ivan Valentim Santos@
Disciplina: POO2
Data: Sat May 10 10:13:24 BRT 2014
Caminho do Arquivo: C:\Jackson\Copy\Compartilhamento 4º Periodo\ArquivosTeste\teste/TesteArquivo03.java
Compilação: Arquivo Compilador com Sucesso

